--- a/src/View/AboutWindow.xaml
+++ b/src/View/AboutWindow.xaml
@@ -4,7 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="About" Width="525" Height="350">
+        Title="About"
+        SizeToContent="WidthAndHeight">
     <Grid VerticalAlignment="Center"
           HorizontalAlignment="Center">
         <Grid.ColumnDefinitions>
@@ -14,9 +15,8 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        
-        <TextBlock xml:space="preserve">
-SpotifyMuter - A simple Spotify Ad Muter for Windows
+
+        <TextBlock xml:space="preserve">SpotifyMuter - A simple Spotify Ad Muter for Windows
 Copyright(C) 2012-2016 Eric Zhang, 2016 Maschmi
 
 This program is free software: you can redistribute it and/or modify
@@ -31,6 +31,7 @@ GNU General Public License for more details.
             
 You should have received a copy of the GNU General Public License
 along with this program. If not, see&lt;http://www.gnu.org/licenses/>.
-        </TextBlock>
+
+Material Design icons by Google http://google.github.io/material-design-icons/</TextBlock>
     </Grid>
 </Window>
